--- a/backend/templates/about.html
+++ b/backend/templates/about.html
@@ -212,8 +212,41 @@
                 </div>
             </div>
         </section>
-      </div>
+    </div>
 
+    </div>
+
+    <div class="row">
+ 
+        <div class="card-body">
+          <h2 class="card-title">Tester</h2>
+          <section class="main-body">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-md-3">
+                          <div class="card profile-card-3">
+                              <div class="background-block">
+                                  <img src="https://images.pexels.com/photos/459225/pexels-photo-459225.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="profile-sample1" class="background"/>
+                              </div>
+                              <div class="profile-thumb-block">
+                                  <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGkE8Jux6MwiA/profile-displayphoto-shrink_400_400/0/1621835719925?e=1634169600&v=beta&t=2rhZrAYmx2HoNPkz9SOk14blnprKRI7kFyeaAOODcHk" alt="profile-image" class="profile"/>
+                              </div>
+                              <div class="card-content">
+                              <h2>Chirantan Muliya<small>Backend Developer</small></h2>
+                              <div class="icon-block">
+                                  <a class="btn btn-outline-primary-temp btn-outline-primary" target="_blank"
+                                  href="https://www.linkedin.com/in/chirantan-muliya-961974209/">LinkedIn Profile</a>
+                              </div>
+                              </div>
+                          </div>
+                      </div>
+                      
+                      
+                  </div>
+              </div>
+          </section>
+      </div>
+  
       </div>
     </div>
 
