--- a/backend/templates/experience.html
+++ b/backend/templates/experience.html
@@ -45,7 +45,7 @@
                         <a href="{% url 'profile' response.user.username %}">{{response.name}}</a>
                       </p>
                       <p class="card-text company capitalize">
-                        interned at <strong>{{response.company}}</strong>
+                        interview experience of <strong>{{response.company}}</strong>
                       </p>
 
                       <a
