--- a/backend/templates/tq.html
+++ b/backend/templates/tq.html
@@ -94,9 +94,9 @@
 
 <div class="card mt-5" style="max-width: 35rem; margin: 20px auto;">
 	<div class="card-body justify-content-center">
-<div class="jumbotron">
-  <h1>
-    <em>Thank you for sharing your feedback with us... We will work on it soon...</em>
-  </h1>
+		<h2 class="card-title text-center mb-4 mt-2">Thank You!!</h2>
+		<p>Thank you for sharing your feedback with us... We will work on it soon...</p>
+	</div>
 </div>
+
 {% endblock content %}
