--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -86,7 +86,7 @@
                 >
               </p>
               <p class="card-text company capitalize">
-                interned at <strong>{{response.company}}</strong>
+                interview experience of <strong>{{response.company}}</strong>
               </p>
 
               <a
