--- a/backend/templates/experience.html
+++ b/backend/templates/experience.html
@@ -26,6 +26,8 @@
       <p><a class="badge badge-primary badge-pill p-2" style="float:right;" href="{% url 'company' %}"> Search for Company</a></p>
       {% if msg_empty %}
       <p><strong>{{msg_empty}}</strong></p>
+      {% else %}
+      <p><strong>Current Responses : {{ responses|length }}</strong></p>
       {% endif %}
       {% regroup responses by company as company_lists %}
       {% for company_list in company_lists %}
