--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -37,6 +37,16 @@
       text-decoration: none;
       color: #76b852;
     }
+
+        @media only screen and (max-width: 975px) {
+      .btn {
+        margin: 10px auto;
+      }
+
+      .nav-link {
+        text-align: center;
+      }
+    }
   </style>
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <a
@@ -63,7 +73,7 @@
             >Hello <strong>{{ request.user.first_name }}!</strong></a>
         </li>
         {% endif %}
-        
+
         {% if request.user.is_staff %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'company' %}">Search Companies</a>
@@ -72,7 +82,7 @@
           <a class="nav-link" href="{% url 'experience' %}">Experiences</a>
         </li>
         {% endif %}
-          
+
         <li class="nav-item">
           <a class="nav-link" href="{% url 'write' %}">Write</a>
         </li>
@@ -82,23 +92,23 @@
 
         {% if request.user.is_authenticated %}
         <li class="nav-item">
-          <a class="ml-2 btn btn-outline-primary" href="{% url 'feedback' %}"
+          <a class="ml-2 btn btn-outline-primary nav-link" href="{% url 'feedback' %}"
             >Feedback</a
           >
         </li>
         <li class="nav-item">
-          <a class="ml-2 btn btn-outline-danger" href="{% url 'logout' %}"
+          <a class="ml-2 btn btn-outline-danger nav-link" href="{% url 'logout' %}"
             >Log Out</a
           >
         </li>
         {% else %}
         <li class="nav-item">
-          <a class="ml-2 btn btn-outline-primary" href="{% url 'login' %}"
+          <a class="ml-2 btn btn-outline-primary nav-link" href="{% url 'login' %}"
             >Log In</a
           >
         </li>
         <li class="nav-item">
-          <a class="ml-2 btn btn-outline-secondary" href="{% url 'register' %}">Register</a>
+          <a class="ml-2 btn btn-outline-secondary nav-link" href="{% url 'register' %}">Register</a>
         </li>
 
         {% endif %}
