--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -136,7 +136,7 @@
     </div>
     <div class="col-lg-9">
 
-      {% if request.user.is_staff and staff_id %}
+      {% if request.user.is_superuser and staff_id %}
 
       <div class="col">
         <div class="card post-card mt-4">
