--- a/backend/templates/verifycode.html
+++ b/backend/templates/verifycode.html
@@ -4,13 +4,13 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 
 <script type="application/x-javascript">
-	
-  addEventListener("load", function() { 
-    setTimeout(hideURLbar, 0); 
-  }, false); 
-  function hideURLbar(){ 
-    window.scrollTo(0,1); 
-  }         
+
+  addEventListener("load", function() {
+    setTimeout(hideURLbar, 0);
+  }, false);
+  function hideURLbar(){
+    window.scrollTo(0,1);
+  }
 </script>
 
 <style>
@@ -94,6 +94,8 @@
 
 <div class="card mt-5" style="max-width: 35rem; margin: 20px auto;">
 	<div class="card-body justify-content-center">
+	    <p><strong>ANNOUNCEMENT : </strong>Please enter right password in one go. There is bug which will be removed as soon as developers are awake. Good Night</p>
+	    <hr>
 		<p class="font-weight-bold mt-3">Code has been sent to your email please verify it by entering it here..(Please check spam Folder also!!)</p>
         <hr>
         <form class="" method="POST">
