--- a/backend/templates/experience.html
+++ b/backend/templates/experience.html
@@ -24,11 +24,42 @@
         <div class="head p-2 justify-content-center">{{message}}</div>
       </h1>
       <p><a class="badge badge-primary badge-pill p-2" style="float:right;" href="{% url 'company' %}"> Search for Company</a></p>
+      
+      {% if not filter_done %}
+      <form method="GET">
+        {% csrf_token %}
+        
+        {% if company_wise %}
+        
+        <input type="hidden" name="filter" value="all"/>
+
+        {% else %}
+
+        <input type="hidden" name="filter" value="company_wise"/>
+
+        {% endif %}
+          
+        <p><button type="submit" class="badge badge-primary badge-pill p-2" style="float:right;">
+          
+          
+          {% if company_wise %}
+          Sort by Recent
+            {% else %}
+            Sort by Company
+          {% endif %}
+            
+        
+        </button></p>
+      </form>        
+      {% endif %}
+        
       {% if msg_empty %}
       <p><strong>{{msg_empty}}</strong></p>
       {% else %}
       <p><strong>Current Responses : {{ responses|length }}</strong></p>
       {% endif %}
+      
+      {% if company_wise or filter_done %}
       {% regroup responses by company as company_lists %}
       {% for company_list in company_lists %}
       <p><strong>{{company_list.grouper}}</strong></p>
@@ -68,6 +99,44 @@
                 {% endfor %}
       </div>
       {% endfor %}
+      {% else %}
+      <div class="row">
+        {% for response in responses %}
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <div class="card-body p-5 summary-parent">
+              <p
+                class="card-text summary summary-text"
+                style="height: 10ch; text-overflow: ellipsis; overflow: hidden"
+              >
+                {{response.summary }}...
+              </p>
+              <p class="card-text name">
+                <a href="{% url 'profile' response.user.username %}">{{response.name}}</a>
+              </p>
+              <p class="card-text company capitalize">
+                interview experience of <strong>{{response.company}}</strong>
+              </p>
+
+              <a
+                type="button"
+                class="
+                  btn btn-sm btn-outline-secondary
+                  view-btn
+                  w-100
+                  text-center
+                "
+                href="{% url 'post' response.pk %}"
+              >
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+</div>
+      {% endif %}
+        
     </div>
   </div>
   <script></script>
