Synch With Server

--- a/backend/templates/post.html
+++ b/backend/templates/post.html
@@ -102,7 +102,7 @@ details {
 
               {% if response.ot_question1_link %}
               <p class="card-text blog-text">
-                To get some idea and source,  Follow this LINK : <a href="{{response.ot_question1_link}}" target="_blank"> Question 1 Source </a>
+                To get some idea and source,  Follow this LINK : <a href="{{response.ot_question1_link}}" target="_blank" class="text-primary"> Question 1 Source </a>
               </p>
               {% endif %}
 
@@ -119,7 +119,7 @@ details {
 
               {% if response.ot_question2_link %}
               <p class="card-text blog-text">
-                To get some idea and source,  Follow this LINK : <a href="{{response.ot_question2_link}}" target="_blank"> Question 2 Source </a>
+                To get some idea and source,  Follow this LINK : <a href="{{response.ot_question2_link}}" target="_blank" class="text-primary"> Question 2 Source </a>
               </p>
               {% endif %}
 
@@ -135,7 +135,7 @@ details {
 
               {% if response.ot_question3_link %}
               <p class="card-text blog-text">
-                To get some idea and source,  Follow this LINK : <a href="{{response.ot_question3_link}}" target="_blank"> Question 3 Source </a>
+                To get some idea and source,  Follow this LINK : <a href="{{response.ot_question3_link}}" target="_blank" class="text-primary"> Question 3 Source </a>
               </p>
               {% endif %}
             <hr />
