--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -98,7 +98,7 @@
 		<h2 class="card-title text-center mb-4 mt-2">Create Your Account!</h2>
 		{% if msg %}
 		<div class="alert alert-danger alert-dismissible fade show" role="alert">
-			
+
 			{{msg}}
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
@@ -120,12 +120,12 @@
 			<div class="form-group">
 				<label for="email">Email Address</label>
 				<input type="email" name="email" placeholder="Email Address" required="" class="form-control" id="id_email">
-				<small class="text-danger">**Please use institute email ID</small>
+				<small class="text-seconday">**Please use institute email ID</small>
 			</div>
 			<div class="form-group">
 				<label for="username">Username</label>
 				<input type="text username" name="username" required="" class="form-control" id="id_username">
-				<small class="text-danger">**Your user name is auto generated. Don't edit it</small>
+				<small class="text-seconday">**Your user name is auto generated. Don't edit it</small>
 			</div>
 			<div class="form-group">
 				<label for="password">Password</label>
