--- a/backend/templates/experience.html
+++ b/backend/templates/experience.html
@@ -26,7 +26,7 @@
       <p><a class="badge badge-primary badge-pill p-2" style="float:right;" href="{% url 'company' %}"> Search for Company</a></p>
 
       {% if not filter_done %}
-      <form method="GET">
+      <form method="POST">
         {% csrf_token %}
 
         {% if company_wise %}
